--- a/流程.md
+++ b/流程.md
@@ -41,6 +41,7 @@ tar -zxvf TrimGalore.tar.gz && rm -rf TrimGalore.tar.gz
 ```
 
 ### 下载需要的参考文件
+#### GeneCode
 
 * Human（https://www.gencodegenes.org/human/）
 
@@ -70,6 +71,8 @@ https://ftp.ebi.ac.uk/pub/databases/gencode/Gencode_mouse/release_M32/gencode.vM
 wget -P ~/Reference/GeneCode/Mouse/Fasta/ \
 https://ftp.ebi.ac.uk/pub/databases/gencode/Gencode_mouse/release_M32/GRCm39.genome.fa.gz
 ```
+#### UCSC
+[![p9DeoSs.md.png](https://s1.ax1x.com/2023/05/10/p9DeoSs.md.png)](https://imgse.com/i/p9DeoSs)
 
 ### 生成STAR比对需要的Index文件
 
