--- a/流程.md
+++ b/流程.md
@@ -77,6 +77,7 @@ https://ftp.ebi.ac.uk/pub/databases/gencode/Gencode_mouse/release_M32/GRCm39.gen
 ### 生成STAR比对需要的Index文件
 
 ```bash
+#!!!! 注意：--sjdboverhang 的值是根据测序Reads的长度-1得到的
 ## 人类数据
 mkdir -p ~/Reference/Star_index/{STAR_Human,STAR_Mouse}
 STAR --runMode genomeGenerate \
